# slm-agentic-training-pipeline

./: .gitignore  README.md  pyproject.toml
config/: pipeline_config.yaml
data_pipeline/: backfill_toolace_think.py  build_sft_mix.py  build_train_clean.py  clean_traces.py  common.py  complexity_taxonomy.py  convert_areal.py  convert_toolace.py  derive_db_caps.py  format_for_training.py  format_traj_for_training.py  mix_datasets.py  prepare_agentic_data.py  prepare_data.py  prepare_sdg_input.py  validate_areal.py
docker/: Dockerfile.grpo  Dockerfile.grpo-agentic  Dockerfile.sdg  Dockerfile.training  docker-compose.yml  requirements_sdg.txt
docs/: SFT-Training-Uebersicht.md  agentic-datasets-explained.md  agentic-db-synthesis-log.md  agentic-pivot-overview.md  agentic-sft-data-basis.md  agentic-sft-db-synthesis.md  experiments-hardware.md  experiments-limits.md  experiments-verl_RL_lora-grpo.md  experiments.md  teacher-bakeoff.md
evaluation/: efficiency_benchmark.py  eval_report.py  evaluate.py  grpo_reward.py  rescore.py  reward.py  trajectory_reward.py
ops/: build_sft_data.sh  eval_heldout.sh  gen_traces.sh  grpo_pilot_supervised.sh  grpo_smoke.sh  run_all_baselines.sh  run_baseline_pipeline.sh  sdg_run_supervised.sh  setup_remote.sh  teacher_bakeoff.sh  toolace_backfill.sh  traj_sft_pipeline.sh  watch_gen.sh
sdg_pipeline/: __init__.py  run_sdg.py  trace_capture.py
serving/: deploy_vllm.sh  merge_adapter.py  merge_adapter_mm.py  query_model.py
tools/: bench_deltanet.py  close_rate_probe.py  quantize_fp8.py
training_pipeline/: build_grpo_pool.py  build_weak_pool.py  collator_multiturn.py  grpo_db_bahn_tools.py  grpo_tool_config.yaml  grpo_verl_runner.py  reachability_probe.py  (+2 more)
(+32 files in other folders)
